[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/homing_projectile.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 0.25

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.0
bottom_radius = 0.1
height = 0.4
radial_segments = 4
rings = 0

[node name="homing_projectile" type="Area"]
collision_layer = 0
collision_mask = 0
monitorable = false
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="JustLaunched" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_homing_projectile_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="JustLaunched" to="." method="_on_JustLaunched_timeout"]
